test_output.txt
  File "<stdin>", line 1
    sleep 2
          ^
SyntaxError: invalid syntax
